@@ -1,3 +1,5 @@
+2011-01-06: Hunspell 1.2.14 release:
+  - bug fix
 2011-01-03: Hunspell 1.2.13 release:
   - bug fixes
   - improved compound handling and
